kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapppodcontainername
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: myapppodcontainername
